# BareMacApp

./: CMakeLists.txt  LICENSE  MainMenu.xib  Makefile  barebone-cocoa.sublime-project
Bare Mac App.app/Contents/: Info.plist
Bare Mac App.app/Contents/Resources/: MainMenu.nib
src/: AppDelegate.h  AppDelegate.m  BareboneApp.h  BareboneApp.m  WindowDelegate.h  WindowDelegate.m  appDelegate.h  appDelegate.m  bareboneApp.h  bareboneApp.m  main.m  windowDelegate.h  windowDelegate.m
